<resources>
    <string name="hex_0">0</string>
    <string name="hex_1">1</string>
    <string name="hex_2">2</string>
    <string name="hex_3">3</string>
    <string name="hex_4">4</string>
    <string name="hex_5">5</string>
    <string name="hex_6">6</string>
    <string name="hex_7">7</string>
    <string name="hex_8">8</string>
    <string name="hex_9">9</string>
    <string name="hex_A">A</string>
    <string name="hex_B">B</string>
    <string name="hex_C">C</string>
    <string name="hex_D">D</string>
    <string name="hex_E">E</string>
    <string name="hex_F">F</string>
    <string name="eula_header"> EULA </string>
    <string name="accept">Accept</string>
    <string name="eula_acceptance">You accepted the EULA!</string>
    <string name="tnx_overview">The Trust Nexus (TNX) is an open source ecosystem that provides cryptographically secure mobile identity.
                                \n
                                \nThe ecosystem has two components:
                                \n
                                \n    TNX Mobile Application (\"WebAuthn+\")
                                \n    TNX Web Application
                                \n
                                \nThe source code and licensing details can be found at www.tnxsecure.com.
                                \n
                                \nA security system is truly secure if the detailed plans of the system are known and the bad actors can still not break in.
                                \n
                                \nWith every line of the source code available and with only one known exploit***, the Trust Nexus (TNX) is a highly secure
                                  identity ecosystem that is incredibly easy to use.
                                \n
                                \nThe license has restrictions.  The most important restriction is that the API allowing anyone to add
                                  a credential to the TNX Mobile Application must be maintained.
                                \n
                                \nThe license is free for authenticating external users (e.g., banking customers);
                                  there is an annual per user license fee for internal authentication (e.g., banking employees).
                                \n
                                \n***The only known exploit occurs when someone looks over your shoulder, steals your password,
                                  then steals your phone and signs on before you can report your phone stolen.
                                \n
                                \n&#169; TNX Secure, Inc.</string>
    <string name="optional_info">Only your Screen Name and Contact Email Address are required to begin.
                                 \n
                                 \nThe advantage of filling out the following information is that as more websites implement the TNX system,
                                   you will only need to enter this information once in your mobile device and never have to fill out a web form again.
                                 \n
                                 \nYou can edit this information in the future by selecting Profile from the Options menu</string>
    <string name="about_tnx">About TNX</string>
    <string name="demo_mode">Demo Mode</string>
    <string name="user_created">User Created</string>
    <string name="activity_label_about_tnx">WebAuthn+ - About TNX</string>
    <string name="activity_label_confirm_purchase">WebAuthn+ - Confirm Purchase</string>
    <string name="activity_label_activate">WebAuthn+ - Activate</string>
    <string name="activity_label_credentials">WebAuthn+ - Credentials</string>
    <string name="activity_label_profile">WebAuthn+ - Profile</string>
    <string name="activity_label_personal_data">WebAuthn+ - Personal Data</string>
    <string name="activity_label_send_funds">WebAuthn+ - Send Funds</string>
    <string name="activity_label_receive_funds">WebAuthn+ - Receive Funds</string>
    <string name="activity_label_confirm_funds">WebAuthn+ - Funds Transfer Confirmed</string>
    <string name="activity_label_dlt_signature">WebAuthn+ - DLT Signature</string>
    <string name="activate">Activate</string>
    <string name="activate_create">Begin by creating your password.</string>
    <string name="app_activation">TNX Activation</string>
    <string name="app_name">WebAuthn+</string>
    <string name="app_name_tnx">TNX WebAuthn+</string>
    <string name="application_icon">Application icon.</string>
    <string name="application_timeout">Application Timeout</string>
    <string name="clear_start_again">Clear / Start Again</string>
    <string name="credential_icon">Credential Icon</string>
    <string name="dash">-</string>
    <string name="delete_button">&#60;&#60;&#60; DEL</string>
    <string name="financial_credentials">Financial Credentials</string>
    <string name="credentials">Credentials</string>
    <string name="incomplete_profile">Incomplete Profile</string>
    <string name="menu_icon">Menu icon.</string>
    <string name="max_idle_time_exceeded">Max idle time exceeded.</string>
    <string name="ok">OK</string>
    <string name="profile_requirements">Screen Name and Contact Email are required.</string>
    <string name="sign_on_successful">Sign On Successful.</string>
    <string name="already_signed_on">You are already signed on.</string>
    <string name="update_contacts">Please Update Phone Contacts</string>
    <string name="contacts_requirements">A phone number and email address are both required to transfer funds.</string>
    <string name="phone_not_in_profile">Phone not in \"WebAuthn+ Profile\"</string>
    <string name="action_settings">Settings</string>
    <string name="authority">com.thetrustnexus.cms</string>
    <string name="main_header">Secure Digital Credentials</string>
    <string name="authentication_message">Go to your web application\'s sign on page.\nA cryptographically secure message will be sent to this app.</string>
    <string name="bluetooth_instructions">"Pair" your mobile device from the pairing screen in your browser.</string>
    <string name="bluetooth_pairing_successful">Bluetooth pairing successful.</string>
    <string name="domain_name_confirmed">Domain name confirmed: </string>
    <string name="domain_name_not_confirmed">Domain name NOT confirmed: </string>
    <string name="signature_instructions">Verify the authentication code then touch \"Signature\".</string>
    <string name="overview_credential">You can sign onto your web applications or make a payment by simply touching the associated icon from the list below.</string>
    <string name="scroll_view">As you add more credentials to this digital wallet, they will be displayed in the scroll view below.</string>
    <string name="contacts_message">Touch a record from the following list to send funds to that contact.  The contact must have both a phone number and an email address.</string>
    <string name="transfer_funds_message">Simply touch a financial credential below to send funds to someone in your contacts.</string>
    <string name="funds_transfer_message">This is a test.  All values are test values.</string>
    <string name="funds_transfer_retrieving_data">Retrieving funds transfer data.</string>
    <string name="funds_transfer_accept_cancel">Touch \"Accept\" or \"Cancel\".</string>
    <string name="funds_transfer_confirmed">Funds transfer confirmed by sending and receiving banks.</string>
    <string name="from">From: </string>
    <string name="credential_type_financial">Financial</string>
    <string name="account_balance_label">Account Balance: </string>
    <string name="transfer_amount_label">Transfer Amount: </string>
    <string name="preferences">Preferences</string>
    <string name="profile">Profile</string>
    <string name="exit_name">Exit</string>
    <string name="asterisks">*** </string>
    <string name="required">Required</string>
    <string name="optional">Optional Settings</string>
    <string name="screen_name">Screen Name</string>
    <string name="contact_email">Contact Email Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="legal_address">Legal Address</string>
    <string name="address_line_one">Address Line One</string>
    <string name="address_line_two">Address Line Two</string>
    <string name="city">City</string>
    <string name="state">State / Province</string>
    <string name="postal_code">Zip / Postal Code</string>
    <string name="country">Country</string>
    <string name="mailing_address">Mailing Address</string>
    <string name="same_as_legal_address">Same as Legal Address</string>
    <string name="organization">Organization</string>
    <string name="organization_name">Organization Name</string>
    <string name="organization_title">Your Title</string>
    <string name="organization_phone">Organization Phone</string>
    <string name="organization_url">Organization URL</string>
    <string name="url_base">http://</string>
    <string name="save_profile">Save Profile</string>
    <string name="empty_string"></string>
    <string name="authenticate">Authenticate</string>
    <string name="sign_on">Sign On</string>
    <string name="signature">Signature</string>
    <string name="create_account_label">Create Account</string>
    <string name="clear">Clear</string>
    <string name="credential_provider_label">Credential Provider:</string>
    <string name="url_address_label">URL Address:</string>
    <string name="authentication_code_label">Authentication Code:</string>
    <string name="verification_code_label">Verification Code:</string>
    <string name="request_for_personal_data">Request for Personal Data</string>
    <string name="personal_data_instruction_one">The website below is requesting your personal data to create a secure credential.</string>
    <string name="personal_data_instruction_two">Select the personal information you wish to share.</string>
    <string name="personal_data_instruction_three">Your screen name and contact email address will automatically be sent.</string>
    <string name="personal_data_instruction_four">You can always modify your profile by touching the menu button above.</string>
    <string name="first_name_last_name">First Name / Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="create">Create</string>
    <string name="invalid_authentication_code">Invalid authentication code.</string>
    <string name="account_exists">Account already exists.  Scroll down.</string>
    <string name="invalid_credential_download_code">Invalid credential download code.</string>
    <string name="problem_with_authentication_server">Problem with authentication server.</string>
    <string name="problem_with_transaction_server">Problem with transaction server.</string>
    <string name="problem_retrieving_credential_provider">Problem retrieving credential provider.</string>
    <string name="problem_retrieving_credential_icon">Problem retrieving credential icon.</string>
    <string name="problem_retrieving_credential_type">Problem retrieving credential type.</string>
    <string name="problem_retrieving_credential_uuid">Problem retrieving credential UUID.</string>
    <string name="problem_retrieving_transaction_uuid">Problem retrieving transaction UUID.</string>
    <string name="problem_retrieving_response">Problem retrieving response.</string>
    <string name="please_wait">Please wait…</string>
    <string name="provider_name_vale_pairs_invalid">Provider name value pairs invalid.</string>
    <string name="touch_authenticate">Touch \"Authenticate\" to continue.</string>
    <string name="authenticating">Authenticating&#8230;</string>
</resources>