<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/scroll"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/background"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded,ButtonStyle" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:isScrollContainer="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/bar_height"
                android:layout_marginTop="6dp"
                android:background="@color/bar_color" >
            </View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="6dp"
                android:text="@string/personal_data_instruction_one"
                android:textColor="@color/text_color"
                android:textSize="@dimen/font_size_text"
                android:typeface="normal" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/bar_height"
                android:background="@color/bar_color" >
            </View>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <ImageView
                android:id="@+id/credential_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/credential_icon"/>

            <TextView
                android:id="@+id/credential_provider_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/credential_icon"
                android:paddingTop="6dp"
                android:paddingRight="4dp"
                android:paddingBottom="0dp"
                android:paddingLeft="6dp"
                android:textColor="@color/text_color"
                android:textSize="@dimen/font_size_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/url_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/credential_provider_name"
                android:layout_toRightOf="@+id/credential_icon"
                android:paddingTop="0dp"
                android:paddingRight="4dp"
                android:paddingBottom="0dp"
                android:paddingLeft="6dp"
                android:textColor="@color/alert_color"
                android:textSize="@dimen/font_size_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/authentication_code_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/url_address"
                android:paddingTop="4dp"
                android:paddingRight="4dp"
                android:paddingBottom="0dp"
                android:paddingLeft="6dp"
                android:text="@string/authentication_code_label"
                android:textColor="@color/emphasis_color"
                android:textSize="@dimen/font_size_text"
                android:textStyle="bold"
                android:typeface="normal" />
            <TextView
                android:id="@+id/authentication_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/url_address"
                android:layout_toRightOf="@+id/authentication_code_label"
                android:paddingTop="4dp"
                android:paddingRight="4dp"
                android:paddingBottom="0dp"
                android:paddingLeft="6dp"
                android:textColor="@color/alert_color"
                android:textSize="@dimen/font_size_text"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/bar_height"
                android:background="@color/bar_color" >
            </View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="0dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="6dp"
                android:text="@string/personal_data_instruction_three"
                android:textColor="@color/text_color"
                android:textSize="@dimen/font_size_text"
                android:typeface="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="6dp"
                android:text="@string/personal_data_instruction_four"
                android:textColor="@color/text_color"
                android:textSize="@dimen/font_size_text"
                android:typeface="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingTop="6dp"
                android:text="@string/personal_data_instruction_two"
                android:textColor="@color/emphasis_color"
                android:textSize="@dimen/font_size_text"
                android:textStyle="bold"
                android:typeface="normal" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/bar_height"
                android:background="@color/bar_color" >
            </View>

            <CheckBox
                android:id="@+id/first_name_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/first_name_last_name"
                android:textColor="@color/text_color" />

            <CheckBox
                android:id="@+id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/phone_number"
                android:textColor="@color/text_color" />

            <CheckBox
                android:id="@+id/legal_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/legal_address"
                android:textColor="@color/text_color" />

            <CheckBox
                android:id="@+id/mailing_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/mailing_address"
                android:textColor="@color/text_color" />

            <CheckBox
                android:id="@+id/organization_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/organization"
                android:textColor="@color/text_color" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/personal_data_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/button_gradient"
                    android:height="40dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:text="@string/create"
                    android:textColor="@color/button_label_color"
                    android:textSize="12sp"
                    android:textStyle="bold" >
                </Button>

                <TextView
                    android:id="@+id/provider_name_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/personal_data_button"
                    android:paddingBottom="0dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingTop="4dp"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/font_size_text"
                    android:textStyle="bold"
                    android:typeface="normal" />

                <TextView
                    android:id="@+id/message_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/provider_name_two"
                    android:layout_toRightOf="@+id/personal_data_button"
                    android:paddingBottom="0dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingTop="0dp"
                    android:textColor="@color/label_color"
                    android:textSize="@dimen/font_size_text"
                    android:typeface="normal" />

                <TextView
                    android:id="@+id/message_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/message_one"
                    android:layout_toRightOf="@+id/personal_data_button"
                    android:paddingBottom="6dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingTop="0dp"
                    android:textColor="@color/emphasis_color"
                    android:textSize="@dimen/font_size_text"
                    android:textStyle="bold"
                    android:typeface="normal" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/bar_height"
                android:layout_marginTop="6dp"
                android:background="@color/bar_color" >
            </View>
        </LinearLayout>
    </LinearLayout>

</ScrollView>