<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/background"
              android:orientation="vertical"
              tools:ignore="RtlHardcoded,ButtonStyle,TooManyViews">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/bar_height"
            android:layout_marginTop="6dp"
            android:background="@color/bar_color" >
        </View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/credential_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/credential_icon"/>

            <TextView
                android:id="@+id/credential_provider_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/credential_icon"
                android:paddingTop="6dp"
                android:paddingRight="4dp"
                android:paddingBottom="0dp"
                android:paddingLeft="6dp"
                android:textColor="@color/text_color"
                android:textSize="@dimen/font_size_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/url_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/credential_provider_name"
                android:layout_toRightOf="@+id/credential_icon"
                android:paddingTop="0dp"
                android:paddingRight="4dp"
                android:paddingBottom="0dp"
                android:paddingLeft="6dp"
                android:textColor="@color/alert_color"
                android:textSize="@dimen/font_size_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/authentication_code_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/url_address"
                android:paddingTop="4dp"
                android:paddingRight="4dp"
                android:paddingBottom="0dp"
                android:paddingLeft="6dp"
                android:text="@string/authentication_code_label"
                android:textColor="@color/emphasis_color"
                android:textSize="@dimen/font_size_text"
                android:textStyle="bold"
                android:typeface="normal" />
            <TextView
                android:id="@+id/authentication_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/url_address"
                android:layout_toRightOf="@+id/authentication_code_label"
                android:paddingTop="4dp"
                android:paddingRight="4dp"
                android:paddingBottom="0dp"
                android:paddingLeft="6dp"
                android:textColor="@color/alert_color"
                android:textSize="@dimen/font_size_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/message_zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/authentication_code_label"
                android:paddingTop="4dp"
                android:paddingRight="4dp"
                android:paddingBottom="6dp"
                android:paddingLeft="6dp"
                android:text="@string/authentication_message"
                android:textColor="@color/text_color"
                android:textSize="@dimen/font_size_text"
                android:typeface="normal" />

            <TextView
                android:id="@+id/message_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/message_zero"
                android:paddingTop="0dp"
                android:paddingRight="4dp"
                android:paddingBottom="6dp"
                android:paddingLeft="6dp"
                android:text="@string/overview_credential"
                android:textColor="@color/text_color"
                android:textSize="@dimen/font_size_text"
                android:typeface="normal" />

            <TextView
                android:id="@+id/verification_code_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/message_one"
                android:paddingTop="0dp"
                android:paddingRight="4dp"
                android:paddingBottom="6dp"
                android:paddingLeft="6dp"
                android:text="@string/verification_code_label"
                android:textColor="@color/emphasis_color"
                android:textSize="@dimen/font_size_text"
                android:textStyle="bold"
                android:typeface="normal" />

            <TextView
                android:id="@+id/verification_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/message_one"
                android:layout_toRightOf="@+id/verification_code_label"
                android:paddingTop="0dp"
                android:paddingRight="4dp"
                android:paddingBottom="6dp"
                android:paddingLeft="6dp"
                android:textColor="@color/verification_code_color"
                android:textSize="@dimen/font_size_text"
                android:textStyle="bold" />

            <Button
                android:id="@+id/sign_on_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/verification_code_label"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_gradient2"
                android:height="30dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/sign_on"
                android:textColor="@color/button_label_color"
                android:textSize="12sp"
                android:textStyle="bold" >
            </Button>

            <Button
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/verification_code_label"
                android:layout_toRightOf="@+id/sign_on_button"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_gradient2"
                android:height="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/clear"
                android:textColor="@color/button_label_color"
                android:textSize="12sp"
                android:textStyle="bold" >
            </Button>
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/bar_height"
            android:layout_marginTop="5dp"
            android:background="@color/bar_color" >
        </View>

        <TextView
            android:id="@+id/send_funds_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            android:paddingLeft="6dp"
            android:paddingRight="4dp"
            android:paddingTop="6dp"
            android:text="@string/transfer_funds_message"
            android:textColor="@color/text_color"
            android:textSize="@dimen/font_size_text"
            android:typeface="normal" />

        <View
            android:id="@+id/send_funds_message_bottom"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/bar_height"
            android:background="@color/bar_color" >
        </View>

        <TextView
            android:id="@+id/scroll_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            android:paddingLeft="6dp"
            android:paddingRight="4dp"
            android:paddingTop="6dp"
            android:text="@string/scroll_view"
            android:textColor="@color/text_color"
            android:textSize="@dimen/font_size_text"
            android:typeface="normal" />

        <View
            android:id="@+id/scroll_message_bottom"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/bar_height"
            android:background="@color/bar_color" >
        </View>
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:cacheColorHint="#00000000"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_string"
        android:textColor="@color/text_color" />

</LinearLayout>